--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -9,9 +9,10 @@
 }
 
 
+
 .text-box{
-    font-size: 20px;
-    font-weight: 900;
+    font-size: 25px;
+    font-weight: 1000;
     writing-mode: vertical-rl; /* 세로 쓰기 */
     text-align: center;
     /* margin-right: 30%; */
@@ -21,6 +22,9 @@
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+    margin-right : 15px;
+   	
+
 }
 .text-box:hover{
     transform: scaleX(1.15);
@@ -46,19 +50,20 @@
     /* visibility: hidden; */
     /* margin-top: 100px; */
 }
-.banner {
+.banner { /*  */
     border-radius: 0 30px 30px 0;
     display: flex;
     flex-direction: row;
     position: fixed;
-    max-width: 1.5%;
+    max-width: 3.5%;
     height: 80%;
     margin-top: 7%;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.796);
     border-right: 1px solid gray;
     box-shadow: 1px 1px 5px gray;
     z-index: 1;
     transition: 1s;
+    
 }
 
 /* .logo {
