--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -1,7 +1,13 @@
 .label{
   font-family: 'Gamja Flower', cursive;
 }
-
+.info {
+	font-size: 12px;
+	padding: 5px;
+}
+.info .title {
+	font-weight: bold;
+}
 #map {
 	width: 100%;
 	height: 100vh;
@@ -9,9 +15,9 @@
 }
 
 
-
 .text-box{
-    font-size: 25px;
+	font-family: 'Gamja Flower', cursive;
+    font-size: 30px;
     font-weight: 1000;
     writing-mode: vertical-rl; /* 세로 쓰기 */
     text-align: center;
@@ -22,9 +28,7 @@
     -khtml-user-select: none;
     -webkit-user-select: none;
     user-select: none;
-    margin-right : 15px;
-   	
-
+    margin-right : 15px;	
 }
 .text-box:hover{
     transform: scaleX(1.15);
@@ -32,10 +36,47 @@
     transition: 2s;
 }
 .logo {
-	width: 7%;
-    margin: 15px 0;
+	display: flex;
     position: fixed;
     z-index: 1;
+}
+.logo .navbar-brand{
+	margin-top: 10px
+}
+.side-button{
+	padding: 0;
+}
+.side-button ul{
+	padding: 0;
+	background-color: white;
+	display: flex;
+	align-content: center;
+	list-style: none;
+	text-align: center;
+	box-shadow: 1px 1px 1px gray;
+	border-radius: 5px;
+}
+.side-button ul li button{
+	border-radius: 5px;
+	padding: 15px;
+	font-family: 'Gamja Flower', cursive;
+	font-size: 20px;
+	font-weight: 600;
+	border: 0;
+	cursor: pointer;
+}
+.side-button ul li button:hover{
+	color: #4169E1;
+}
+.side-button ul li button.active{
+	color: #4169E1;
+}
+.side-button ul li button img{
+	vertical-align: middle;
+	width: 20px;
+}
+.navbar-brand img{
+	width: 80%
 }
 .banner-list {
     display: flex;
@@ -50,7 +91,7 @@
     /* visibility: hidden; */
     /* margin-top: 100px; */
 }
-.banner { /*  */
+.banner {
     border-radius: 0 30px 30px 0;
     display: flex;
     flex-direction: row;
@@ -63,7 +104,6 @@
     box-shadow: 1px 1px 5px gray;
     z-index: 1;
     transition: 1s;
-    
 }
 
 /* .logo {
@@ -109,9 +149,131 @@
   background-color: rgba(0, 148, 0, 0.623);
   color: #ffffff;
 }
-.navbar-brand img{
-	width: 100%
+.banner-list input#T{
+	background-image:url(/resources/static/img/marker_img/tennis.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
 }
+.banner-list input#B{
+	background-image:url(/resources/static/img/marker_img/badminton.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#BB{
+	background-image:url(/resources/static/img/marker_img/baseball.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#BK{
+	background-image:url(/resources/static/img/marker_img/basketball.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#J{
+	background-image:url(/resources/static/img/marker_img/footVolley.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#G{
+	background-image:url(/resources/static/img/marker_img/gateball.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#F{
+	background-image:url(/resources/static/img/marker_img/soccer.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#S{
+	background-image:url(/resources/static/img/marker_img/swimming.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#V{
+	background-image:url(/resources/static/img/marker_img/volleyball.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#H{
+	background-image:url(/resources/static/img/marker_img/weightlifter.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#A{
+	background-image:url(/resources/static/img/marker_img/archery.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#P{
+	background-image:url(/resources/static/img/marker_img/park_sports.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#E{
+	background-image:url(/resources/static/img/marker_img/etc.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#park{
+	background-image:url(/resources/static/img/park.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+.banner-list input#tashu{
+	background-image:url(/resources/static/img/bike.png);
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	padding-left: 30px;
+}
+
+
+@keyframes blink-effect {
+	0% {opacity: 0.2;}
+	25% {opacity: 0.5;}
+	50% {opacity: 0.8;}
+	75% {opacity: 1;}
+	100% {opacity: 1;}
+}
+.gps img{
+	width: 35px;
+  	animation: blink-effect 1s ease infinite;
+	/*
+	animation-name: blink-effect;
+	animation-duration: 1s;
+	animation-iteration-count:infinite;
+	animation-timing-function:ease;
+	*/
+}
+
 
     .wrap {position: absolute;left: 0;bottom: 40px;width: 250px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
     .wrap * {padding: 0;margin: 0;}
